--- a/rmq-dep.yaml
+++ b/rmq-dep.yaml
@@ -31,5 +31,5 @@ spec:
                   name: app-secret
                   key: rmq-pass
             - name: RABBITMQ_DEFAULT_USER
-              VALUE: "guest"
+              value: "guest"
               
