--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -26,7 +26,7 @@ spec:
           args:
             - "--ignore-db-dir=lost+found"
           volumeMounts:
-            - mountPath: /var/lin/mysql
+            - mountPath: /var/lib/mysql
               name: vpro-db-data
           ports:
             - name: vprodb-port
